@@ -75,20 +75,26 @@ for %%a in (%args%) do (
 )
 
 set "module_launcher=<module_launcher>"
+:: The list of --add-exports can easily exceed the 8191 command
+:: line character limit so pass them in a command line arguments file.
 if "%module_launcher%"=="True" (
+  set "main_class=--module <main_module>/<main_class>"
   set "app_path_arg=--module-path"
-  call :escape_args <add_exports>
-  for %%v in (!args!) do (
-    call :unescape_arg %%v
-    set "jvm_args=!jvm_args! !arg!"
+  set exports_file="%location%.!basename!.exports"
+  if not exist "!exports_file!" (
+    for %%a in (<add_exports>) do (
+      echo %%a >> "!exports_file!"
+    )
   )
+  set "jvm_args=!jvm_args! @!exports_file!"
 ) else (
+  set "main_class=<main_class>"
   set "app_path_arg=-cp"
 )
 
 if "%VERBOSE_GRAALVM_LAUNCHERS%"=="true" echo on
 
-"%location%<jre_bin>\java" <extra_jvm_args> %jvm_args% %app_path_arg% "%absolute_cp%" <main_class> %launcher_args%
+"%location%<jre_bin>\java" <extra_jvm_args> %jvm_args% %app_path_arg% "%absolute_cp%" %main_class% %launcher_args%
 
 exit /b %errorlevel%
 :: Function are defined via labels, so have to be defined at the end of the file and skipped
